testsuite/tests/module/T414.stderr

T414.hs:1:1: error: [GHC-67120]
    The IO action ‘main’ is not exported by module ‘Main’
